--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                    <div class="form-group">
                     <label for="asset">Map URL</label>
                     <input type="text"
-                      class="form-control" name="asset" id="asset" aria-describedby="helpId" placeholder="">
+                      class="form-control" name="mapUrl" id="mapUrl" aria-describedby="helpId" placeholder="">
                     <small id="helpId" class="form-text text-muted">Enter Map Url that describe Your Location e.g https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.3420547623155!2d35.79969531464801!3d-6.218544662638076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x184dfb0bcbd64cab%3A0x6f07a91fa266fdac!2sUniversity%20Of%20Dodoma%20(UDOM)!5e0!3m2!1sen!2sus!4v1578415318081!5m2!1sen!2sus</small>
                   </div>
                   <div class="form-group">
