--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     .white-c{
        color:#fff;  
     }
+    #loading{
+        position: fixed;
+  left: 0px;
+  top: 40%;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+    }
     </style>
     </head>
   <body>
@@ -46,7 +54,7 @@
               </form>
           </div>
       </nav>
-      <div id="Loading" style="text-align: center;">
+      <div id="loading" style="text-align: center;">
           <img src="resources/images/loading.svg" alt="">
           <div><b>Please Wai...</b></div>
       </div>
