--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="card-body">
             <h4 class="card-title">{{sName}}</h4>
             <p class="card-text">
-            <iframe src="{{mapUrl}}" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="{{sMapUrl}}" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </p>
         </div>
     </div>
