--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                    <div class="form-group">
                      <label for="sname">Service Name</label>
                      <input type="text"
-                       class="form-control" name="sname" id="sname" aria-describedby="helpId" placeholder="">
+                       class="form-control" name="sName" id="sName" aria-describedby="helpId" placeholder="">
                      
                    </div>
 
