--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <script src="resources/js/popper.min.js" ></script>
     <script src="resources/js/bootstrap.min.js" ></script>
     <script src="resources/js/mustache.min.js" ></script>
-    <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
+    <script src="https://unpkg.com/@aeternity/aepp-sdk@6.1.2/dist/aepp-sdk.browser-script.js"></script>
     <script src="index.js"></script>
 
 </body>
